--- a/ArchiSysEmb-PROJET/ArchiSysEmb-PROJET.ioc
+++ b/ArchiSysEmb-PROJET/ArchiSysEmb-PROJET.ioc
@@ -1,8 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,Mutexes01,configUSE_NEWLIB_REENTRANT,FootprintOK
+FREERTOS.IPParameters=Tasks01,Mutexes01,configUSE_NEWLIB_REENTRANT,FootprintOK,configTOTAL_HEAP_SIZE
 FREERTOS.Mutexes01=debugLock,Static,debugLockControlBlock
-FREERTOS.Tasks01=COMM_MGR,1,128,startCommMgr,Default,NULL,Dynamic,NULL,NULL;BT1_MGR,-2,128,startBT1Mgr,Default,NULL,Dynamic,NULL,NULL;INPUT_MGR,0,128,startInputMgr,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=COMM_MGR,0,128,startCommMgr,Default,NULL,Dynamic,NULL,NULL;BT1_MGR,0,128,startBT1Mgr,Default,NULL,Dynamic,NULL,NULL;INPUT_MGR,0,128,startInputMgr,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=15360
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -13,32 +14,29 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP4=USART1
+Mcu.IP5=USART2
+Mcu.IP6=USART3
+Mcu.IPNb=7
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PB3
-Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin16=VP_SYS_VS_tim1
-Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB3
+Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin15=VP_SYS_VS_tim1
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PC5
-Mcu.Pin9=PB10
-Mcu.PinsNb=18
+Mcu.Pin7=PC5
+Mcu.Pin8=PB10
+Mcu.Pin9=PA9
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -83,8 +81,6 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.Locked=true
-PA5.Signal=S_TIM2_CH1_ETR
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB10.Mode=Asynchronous
@@ -140,7 +136,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -191,12 +187,6 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
-SH.S_TIM2_CH1_ETR.ConfNb=1
-TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
-TIM2.Period=799
-TIM2.Prescaler=9999
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -207,8 +197,6 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
 isbadioc=false
