--- a/ArchiSysEmb-PROJET/ArchiSysEmb-PROJET.ioc
+++ b/ArchiSysEmb-PROJET/ArchiSysEmb-PROJET.ioc
@@ -14,29 +14,32 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IP5=USART2
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin15=VP_SYS_VS_tim1
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PB3
+Mcu.Pin15=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin16=VP_SYS_VS_tim1
+Mcu.Pin17=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PC5
-Mcu.Pin8=PB10
-Mcu.Pin9=PA9
-Mcu.PinsNb=16
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PC5
+Mcu.Pin9=PB10
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -59,6 +62,7 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:tru
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.GPIOParameters=GPIO_Label
@@ -187,6 +191,12 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period
+TIM2.Period=799
+TIM2.Prescaler=9999
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -197,6 +207,8 @@ VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
 isbadioc=false
